--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
             <label for="sound-toggle">开启白噪音 (雨声)</label>
         </div>
 
+       <div class="chat-room-box">
+            <details>
+                <summary>👇 点击进入 / 隐藏 “摸鱼聊天室”</summary>
+                
+                <iframe src="https://www3.cbox.ws/box/?boxid=3552296&boxtag=2Kqpzy" width="100%" height="450" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>	
+                </details>
+        </div>
         <div class="bg-selector-box">
             <p>切换氛围背景</p>
             <div class="thumbnails">
